# wbc_aidin

./: CMakeLists.txt  README.md  package.xml
common/: CMakeLists.txt  package.xml
common/include/: cppTypes.h
common/include/Contollers/: LegContoller.h
config/: CMakeLists.txt  package.xml
robot/: CMakeLists.txt  package.xml
robot/include/: RobotController.h  main_helper.h
robot/src/: main_helper.cpp
sim/: CMakeLists.txt  package.xml
use/: CMakeLists.txt  package.xml
user/: CMakeLists.txt  package.xml
user/AiDIN_Controller/: AiDIN_Controller.cpp  AiDIN_Controller.hpp  AiDIN_UserParametes.h  main.cpp
