<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common</name>
  <version>0.0.0</version>
  <description>common package</description>
  <maintainer email="lexondms1@g.skku.edu">eunseop</maintainer>
  <license>AiDIN_Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>eigen3_cmake_module</depend> <!-- For finding Eigen3 -->
  <depend>Eigen3</depend>
  <depend>lcm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend> <!-- For Google Test integration -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
