<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.0.0</version>
  <description>wbc_aidin/sim package</description>
  <maintainer email="lexondms1@g.skku.edu">eunseop</maintainer>
  <license>AiDIN_Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>eigen3_cmake_module</depend>  <!-- Eigen3를 찾기 위한 모듈 -->
  <depend>Eigen3</depend>
  <depend>lcm</depend>
  <depend>qt5_cmake_plugin</depend>  <!-- Qt5를 사용하기 위한 의존성 -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>  <!-- Google Test 통합 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
